--- a/custom_facts_undo.yml
+++ b/custom_facts_undo.yml
@@ -1,4 +1,5 @@
 ---
+# Undo custom_facts.yml
 # 1. Define local facts which a) define the name of the samba service and b) name of the samba package
 # 2. Copy the facts to the file servers (pick any 2 managed hosts)
 # 3. Write a 2nd play which installs and enables smbd
